# browser-use

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: pyproject.toml
backend/app/agent/: compaction.py  demo.py  format.py  graph.py  prompt.py  routing.py  run.py  run_browser.py  state.py
backend/app/api/: bridge_ws.py  main.py  run_manager.py  ws.py
backend/app/browser/: base.py  cdp_session.py  extension_bridge.py  local_cdp.py  screencast.py  select_support.py  som_overlay.py  tab_registry.py
backend/app/config/: container.py  settings.py
backend/app/events/: emitter.py  protocol.py  sink.py
backend/app/llm/: base.py  factory.py  openrouter.py  usage.py
backend/app/memory/: document.py  store.py
backend/app/observation/: extract.py  extract_cdp.py  page_query.py  raw.py
backend/app/prompt/: loader.py  resolver.py
backend/app/telemetry/: records.py  store.py
backend/app/tools/: dispatcher.py  specs.py
backend/bench/: .gitignore  judge.py  recorder.py  run_bench.py  tasks.py
backend/tests/: test_health.py
backend/tests/agent/: test_act_node.py  test_ask_user.py  test_bridge_graph_e2e.py  test_checkpoint_serde.py  test_compaction.py  test_container_b2.py  test_dispatcher.py  test_evaluation.py  test_events.py  test_fakes.py  test_format_tabs.py  test_loop_e2e.py  test_loop_guard.py  test_memory_wiring.py  test_new_marker.py  test_observe_node.py  test_observe_vision.py  test_page_query.py  test_ports.py  test_prompt_caching.py  (+12 more)
(+116 files in other folders)
