[project]
name = "browser-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "jinja2>=3.1",
  "aiofiles>=24.1",
  "playwright>=1.48",
  "browser-agent-contracts",
  "cdp-use>=1.4.5",
  "cryptography>=49.0.0",
  "pillow>=10.4",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.uv.sources]
browser-agent-contracts = { path = "../packages/contracts", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
markers = ["browser: integration tests that launch headless Chromium (slow)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
